// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AggregationFilters does not render aggregations when numberOfResults is 0 1`] = `""`;

exports[`AggregationFilters does not render aggregations with empty buckets 1`] = `
<Row
  className="bg-white pa3"
  gutter={0}
  justify="space-between"
  type="flex"
>
  <Col
    gutter={32}
    key="agg1"
    lg={24}
    xs={24}
  >
    <EventTracker
      eventId="Facet-Aggregation 1"
      eventPropName="onChange"
      extractEventArgsToForward={null}
    >
      <AggregationFilter
        aggregationType="checkbox"
        buckets={
          Immutable.List [
            Immutable.Map {},
          ]
        }
        name="Aggregation 1"
        onChange={[Function]}
      />
    </EventTracker>
  </Col>
</Row>
`;

exports[`AggregationFilters renders with all props set 1`] = `
<Row
  className="bg-white pa3"
  gutter={0}
  justify="space-between"
  type="flex"
>
  <Col
    gutter={32}
    key="agg1"
    lg={24}
    xs={24}
  >
    <EventTracker
      eventId="Facet-[Range] Aggregation 1"
      eventPropName="onChange"
      extractEventArgsToForward={null}
    >
      <AggregationFilter
        aggregationType="range"
        buckets={
          Immutable.List [
            Immutable.Map {
              "key": "foo",
              "doc_count": 1,
            },
          ]
        }
        name="[Range] Aggregation 1"
        onChange={[Function]}
        selections="foo"
      />
    </EventTracker>
  </Col>
  <Col
    gutter={32}
    key="agg2"
    lg={24}
    xs={24}
  >
    <EventTracker
      eventId="Facet-Aggregation 2"
      eventPropName="onChange"
      extractEventArgsToForward={null}
    >
      <AggregationFilter
        aggregationType="checkbox"
        buckets={
          Immutable.List [
            Immutable.Map {
              "key": "foo_2",
              "doc_count": 1,
            },
          ]
        }
        name="Aggregation 2"
        onChange={[Function]}
        splitDisplayName={true}
      />
    </EventTracker>
  </Col>
</Row>
`;
